# moldova-personas

./: .dockerignore  .env.example  .gitignore  AGENT.md  ASSESSMENT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HF_RELEASE_READINESS.md  IMPLEMENTATION.md  INITIATIVE_enhanced_personality_and_quality.md  MANIFEST.in  METRICS_SPEC.md  NBS_2024_REPORT.md  NBS_DATA_INTEGRATION.md  NEMOTRON.md  NEMOTRON_PATCHES_V2_SUMMARY.md  PACKAGING_SUMMARY.md  PLAN.md  PRODUCTION_OPS_SUMMARY.md  PROTOTYPE.md  PR_CHECKLIST.md  QWEN_SETUP.md  README.md  RECALIBRATED_PGM_NBS_2024.py  SCIENTIFIC_ROBUSTNESS_ASSESSMENT.md  TALEB_REVIEW.md  TODO.md  WOLFRAM_REVIEW.md  demo.py  demo_5_personas.py  demo_narrative.py  demo_nemo_full.py  demo_nemotron_feel.py  demo_nemotron_pipeline.py  demo_ocean_pipeline.py  demo_trust_report_enhanced.py  nbs_corrections_2024.json  nbs_ethnicity_2024.json  nbs_population_by_age_2024.json  (+10 more)
.github/workflows/: ci.yml
apps/demos/: _bootstrap.py  demo.py  (+6 more)
badges/: README.md  tests.json
benchmarks/: README.md  bench_generation.py  run_all.py
config/: __init__.py  cities_by_region.json  districts_by_region.json  ethnocultural_tables_2024.json  localities_by_region.json
docs/: GRADIENT_INTEGRATION.md  PRODUCTION_READY.md  ZERO_FABRICATION_POLICY.md
final_dataset_10/: personas_20260131_132958.json  personas_20260131_132958.parquet  trust_report_20260131_132958.json
final_dataset_10_with_narratives/: personas_with_narratives.json
moldova_personas/: __init__.py  __main__.py  async_narrative_generator.py  census_data.py  checkpoint.py  cli.py  data_freshness.py  ethnocultural_tables.py  export_formats.py  exporters.py  gate_codes.py  generator.py  geo_tables.py  golden_set.py  gradient_integration.py  huggingface_export.py  llm_client.py  locality_integrity.py  metrics.py  models.py  names.py  narrative_contract.py  narrative_generator.py  nemotron_feel_patch.py  nemotron_patches_v2.py  nemotron_pipeline.py  nemotron_pipeline_v2.py  ocean_framework.py  ocean_nemo_schema.py  population_qa.py  prompts.py  pxweb_fetcher.py  py.typed  requirements.txt  run_manifest.py  safety_gates.py  scale_harness.py  soft_validators.py  statistical_tests.py  streaming.py  (+2 more)
output_100_nemotron/: nemotron_personas_100.json
output_10k_analysis_only/: personas_20260201_194142.parquet  run_manifest_20260201_194142.json  trust_report_20260201_194142.json
output_10k_analysis_only_20260201/: personas_20260201_202246.parquet  run_manifest_20260201_202246.json  trust_report_20260201_202246.json
output_10k_high_stakes_20260201/: personas_20260201_203041.parquet  run_manifest_20260201_203041.json  trust_report_20260201_203041.json
output_20k_high_stakes_20260201/: personas_20260201_203856.parquet  run_manifest_20260201_203856.json  trust_report_20260201_203856.json
output_500/: moldova_personas.csv  moldova_personas.json  moldova_personas.jsonl  moldova_personas.parquet  moldova_personas_stats.json  moldova_personas_stats.md
output_5_personas/: personas.json  trust_report.json
output_demo_5/: gradient_trust_20260131_120751.json  personas_20260131_120751.json  personas_20260131_120751.parquet  run_manifest_20260131_120751.json  trust_report_20260131_120751.json
output_nemo_parity/: README.md  nemotron_moldova_full.json  nemotron_moldova_nemo.jsonl
scripts/: extract_ethnocultural_xlsx.py  scale_test_100.py  validate_100k.py
test_scale/: nemotron_personas_10.json
test_scale_real/: nemotron_personas_5.csv  nemotron_personas_5.json
tests/: conftest.py  test_api_compatibility.py  test_async_narrative.py  test_checkpoint.py  test_contract.py  test_data_freshness.py  test_exporters.py  test_generator.py  test_gradient_payload.py  test_integration.py  test_metrics.py  test_names.py  test_ocean.py  test_prompts.py  test_pxweb_fetcher.py  test_quality_dashboard.py  test_statistical_validation.py  test_streaming.py  test_validators.py
(+23 files in other folders)
